to the language modules take place, starting from the stable release
1.3.6.

This branch is also the basis for the unofficial "swig1.3" Debian
package that is available from:
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian

Eventually this branch will be merged back to the trunk of the CVS
tree (maybe).

Version 1.3.12 (In Progress)
============================
05/26/2002: beazley
            -proxy option added to many language modules.  This is the
            same as -shadow.
            
05/26/2002: beazley
            [perl] Fixed some inconsistencies in the -package option.
            -package merely sets the package name to be used on the
            wrappers.  It does not change the name of the shared library
            file or the name of the generated .pm file.  This was
            broken at some point, but works again now.

05/25/2002: beazley
            [perl] Fixed [ 475452 ] memory leak in return-by-value.
            Problem related to static member variables returning newly
            allocated objects. Reported by Roy Lecates.
 
05/25/2002: beazley
            [perl] Fixed [ 513134 ] %BLESSEDMEMBERS isn't always right.
            Reported by Fleur Diana Dragan.

05/25/2002: beazley
            Fixed [ 540735 ] -importall and the -I option.

05/25/2002: beazley
            [guile] Fixed [ 532723 ] Default arg for char* can SegV.  
            Error in guile module.  Reported by Brett Williams.

05/25/2002: beazley
            Subtle change to typemap application code.  The "freearg"
            typemap must exactly match up with the "in" or "ignore"
            typemap.  For example:

                 %typemap(in) (char *data, int len) { ... };
                 %typemap(freearg) char *data { ... }; 

                 void foo(char *data, int len);

             In this case, the "in" typemap is applied, but the
             freearg typemap is not.  This is because the freearg